# model_type_identifier

./: LICENSE  README.md  check_safetensors_dtypes.py  pyproject.toml  requirements.txt  setup.py
check_safetensors_file/: __init__.py  __main__.py  cli.py
